fix: fix vertical align

--- a/src/app/components/wizard-header/wizard-header.component.css
+++ b/src/app/components/wizard-header/wizard-header.component.css
@@ -14,6 +14,12 @@ body {
   display: none;
 }
 
+.step {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .step-wrapper.active {
   display: block;
 }
